# margarine

./: .gitignore  :w  =program  Cargo.toml  README.md  ]  ]:w  as  cat  dhat-heap.json  docs.md  dump.txt  dump1.txt  dump2.txt  engine.c  features.txt  ffi.mar  flappy_bird.mar  gl.mar  glfw.mar  gui.mar  key.mar  libstdlib.dylib  margarine_runtime.c  optimized.ll  optout  out.ll  out.wasm  out.wat  profile.json  raylib.mar  ref.md  something.mar  std.mar  test.mar  tests.mar  text.txt  text0.txt  tutorial.md  window.mar
butter/: Cargo.toml
butter-runtime-api/: Cargo.toml
butter-runtime-api/proc-macros/: Cargo.toml
butter-runtime-api/proc-macros/src/: lib.rs
butter-runtime-api/src/: alloc.rs  ffi.rs  lib.rs  ptr.rs
butter/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs  tys.rs
docs/: CHAPTER_0.md  CHAPTER_1.md
example-project/: build.mar  build.toml
example-project/src/: fib.mar  intro.mar  main.mar
examples/: any.mar  dbg.mar  fib.mar  guessing_game.mar  hello.mar  list.mar  test.mar
examples/aoc2025/: day0.mar  day0.txt  day1.2.mar  day1.mar  day2.mar  day2.txt  day3.mar  day4.mar
examples/test/: hello_world.mar
fuzz/: Cargo.toml
fuzz/src/: main.rs
game-runtime/: Cargo.toml
game-runtime/src/: ffi.rs  lib.rs  main.rs
lsp/: Cargo.toml
lsp/src/: json.rs  main.rs
margarine/: Cargo.toml  generate_opcodes.py
margarine-lsp/: .gitignore_root  README_SETUP.md
margarine-lsp/vscode-client/: esbuild.js  package.json  pnpm-lock.yaml
margarine-lsp/vscode-client/src/: package.json  pnpm-lock.yaml
margarine-lsp/vscode-client/src/src/: extension.ts
margarine/.semantic_analysis/: Cargo.toml
margarine/.semantic_analysis/src/: .lib.rs  errors.rs  funcs.rs  lib.rs  namespace.rs  scope.rs  types.rs
margarine/.semantic_analysis/src/types/: ty.rs  ty_builder.rs  ty_map.rs
margarine/codegen/: Cargo.toml
margarine/codegen/src/: lib.rs
margarine/common/: Cargo.toml
margarine/common/derive/: Cargo.toml
margarine/common/derive/src/: lib.rs
margarine/common/src/: buffer.rs  fuck_map.rs  hashables.rs  lib.rs  small_vec.rs  source.rs  static_vec.rs  string_map.rs  symbol_id.rs  toggle_buffer.rs  utf8.rs
margarine/errors/: Cargo.toml
margarine/errors/src/: fmt.rs  lib - Copy.rs  lib.rs
margarine/examples/: arithmetic.mar  comparisson.mar  enums.mar  features.txt  ffi.mar  function_types.mar  impl_blocks.mar  inouts.mar  match.mar  pointers.mar  speedtest.mar  struct_types.mar  variables.mar
margarine/ir/: Cargo.toml
margarine/ir/src/: lib.rs
margarine/lexer/: Cargo.toml
margarine/lexer/src/: errors.rs  lib.rs  tests.rs
margarine/llvm-api/: Cargo.toml  main.bc  main.ll
margarine/llvm-api/src/: builder.rs  ctx.rs  global.rs  info.rs  lib.rs  module.rs  tys.rs  values.rs
margarine/llvm-api/src/tys/: array.rs  bool.rs  fp.rs  func.rs  integer.rs  ptr.rs  strct.rs  string.rs  union.rs  unit.rs  void.rs
margarine/llvm-api/src/values/: array.rs  bool.rs  fp.rs  func.rs  global.rs  int.rs  ptr.rs  strct.rs  string.rs  union.rs  unit.rs
margarine/parser/: Cargo.toml
margarine/parser/src/: dt.rs  errors.rs  lib.rs  nodes.rs
margarine/parser/src/nodes/: attr.rs  decl.rs  err.rs  expr.rs  stmt.rs
margarine/runtime/: Cargo.toml
margarine/runtime/src/: alloc.rs  bytecode.rs  data_stack.rs  ecs.rs  gc.rs  jit.rs  jitty.rs  lib.rs  obj_map.rs  opcode.rs  pc.rs  register_stack.rs  runtime.rs
margarine/runtime/src/opcode/: runtime.rs
margarine/semantic_analysis/: Cargo.toml
margarine/semantic_analysis/src/: analysis.rs  codegen.rs  errors.rs  funcs.rs  lib.rs  lib.rs:w  llvm_codegen.rs  namespace.rs  scope.rs  sema.rs  symbol_vec.rs  syms.rs  typed_ast.rs  types.rs
margarine/semantic_analysis/src/ir/: terms.rs
margarine/semantic_analysis/src/syms/: containers.rs  func.rs  sym_map.rs  ty.rs
margarine/semantic_analysis/src/types/: containers.rs  func.rs  ty.rs  ty_builder.rs  ty_map.rs  ty_sym.rs
margarine/src/: compilation_unit.rs  lib.rs  main.rs  raylib.rs
margarine/tests/: duplicate_def.mar
margarine/wasm/: Cargo.toml  template.wat
margarine/wasm/src/: lib.rs  low_level.rs
runtime/: Cargo.toml
runtime/.cargo/: config.toml
runtime/src/: lib.rs
std/: duration.mar  list.mar  rand.mar
test/: build.mar  out  something.mar
test/something/: hey.mar
test/src/: main.mar
tests/: advanced.mar  arithmetic.mar  basics.mar  closures.mar  comparison.mar  comprehensive.mar  control_flow.mar  core.mar  functions.mar  logical.mar  modules.mar  stdtests.mar  structs.mar
tests/core/: closure.mar  cow.mar  enums.mar  misc.mar  panic.mar  rc.mar  structs.mar  traits.mar
tests/modules/: helper.mar
