[workspace]
resolver = "1"
members = [
  "butter", # The engine
  "game-runtime", # The binary in which the wasm will be put into

  "margarine", # The Language
  "margarine/common",
  "margarine/lexer",
  "margarine/parser",
  "margarine/semantic_analysis",
  "margarine/wasm",
  "margarine/errors", "game-runtime",
]
