[workspace]
resolver = "1"
default-members = [
    "margarine",
]

members = [
    "margarine",
    "margarine/common",
    "margarine/common/derive",
    "margarine/lexer",
    "margarine/parser",
    "margarine/semantic_analysis",
    "margarine/errors",
    "fuzz", "lsp", "runtime",
]

[profile.release]
debug = true
lto = false
opt-level = 2
codegen-units = 1
split-debuginfo = "packed"
