[package]
name = "butter-runtime-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macros = { path = "./proc-macros" }
#' wenjin = { path = "../../wenjin/wenjin" }
# wasmtime = "*"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime/" }
