[package]
name = "butter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dhat-heap = []

[dependencies]
margarine = { path = "../margarine" }
game-runtime = { path = "../game-runtime" }
wenjin = { path = "../../wenjin/wenjin" }

colourful = { git = "https://github.com/rookieCookies/colourful" }
sti = { git = "https://github.com/leddoo/sti" }

# wasmtime = "*"
libloading = "*"
