[package]
name = "game-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
miri = []

[dependencies]
crc32fast = "1.3.2"
libloading = "*"

butter-runtime-api = { path = "../butter-runtime-api" } 
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime/" }
