[package]
name = "margarine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "./lexer" }
parser = { path = "./parser" }
semantic_analysis = { path = "./semantic_analysis" }
codegen = { path = "./codegen" }
wasm = { path = "./wasm" }
common = { path = "./common" }
errors = { path = "./errors" }

