[package]
name = "margarine"
version = "0.1.0"
edition = "2021"

[features]
fuzzer = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "./lexer" }
parser = { path = "./parser" }
semantic_analysis = { path = "./semantic_analysis" }
common = { path = "./common" }
errors = { path = "./errors" }

sti = { path = "../vendor/sti" }

colourful = { git = "https://github.com/rookieCookies/colourful" }

rand = "*"
git2 = "0.20.2"

tracing = "*"
