[package]
name = "semantic_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer  = { path = "../lexer" }
parser = { path = "../parser" }
errors = { path = "../errors" }
common = { path = "../common" }
llvm-api = { path = "../../../llvm-api" }
sti = { git = "https://github.com/leddoo/sti" }

