[package]
name = "common"
version = "0.1.0"
edition = "2021"

[features]
fuzzer = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sti = { git = "https://github.com/leddoo/sti"}
istd = { git = "https://github.com/rookieCookies/istd" }
colourful = "*"
