[package]
name = "errors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colourful = { git = "https://github.com/rookieCookies/colourful" }
display_plus = { git = "https://github.com/rookieCookies/display_plus" }
common = { path = "../common" }
