[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
lexer = { path = "../lexer" }
errors = { path = "../errors" }
istd = { git = "https://github.com/rookieCookies/istd" }
sti = { git = "https://github.com/leddoo/sti" }

thin-vec = "*"
