[package]
name = "semantic_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "../parser" }
errors = { path = "../errors" }
common = { path = "../common" }
istd = { git = "https://github.com/rookieCookies/istd" }
