[package]
name = "semantic_analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
errors = { path = "../errors" }
parser = { path = "../parser" }
lexer  = { path = "../lexer" }
sti = { path = "../../vendor/sti" }

runtime = { path = "../runtime" }
llvm-api = { path = "../llvm-api" }
